--- a/Maintenance dashboard/MainWindow.xaml
+++ b/Maintenance dashboard/MainWindow.xaml
@@ -5,8 +5,83 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Maintenance_dashboard"
         mc:Ignorable="d"
-        Title="Maintenance dashboard" Height="Auto" Width="auto" >
-    <Grid>
-        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Width="1920" Height="1080" WindowState="Maximized" WindowStyle="None" >
+    <Grid Background="#FFEEEEEE">
+        <StackPanel>
+            <Grid Background="#FF0069C0" Height="10"/>
+            <Grid Margin="5">
+
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,10,0" Grid.Column="1">
+                    <Button Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray">
+                        <materialDesign:PackIcon Kind="BellOutline" IsEnabled="False"/>
+                    </Button>
+                    <Button Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray">
+                        <materialDesign:PackIcon Kind="Settings" IsEnabled="False"/>
+                    </Button>
+                    <Button x:Name="btnCloseWindow" Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
+                        <materialDesign:PackIcon Kind="Power"/>
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+
+        <Grid Margin="250 55 0 0">
+            <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Grid>
+
+        <StackPanel Width="320" HorizontalAlignment="Left" Background="#ff222222" >
+            <Image Source="C:\Users\AdministratorUTR\Source\Repos\MichalGornik93\MaintenanceDashboard\Maintenance dashboard\Photo\MarelliLogo.jpg" Margin="10"/>
+                    <Grid HorizontalAlignment="Left" Background="#ff222222" VerticalAlignment="Bottom">
+            <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.2}">
+                <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" HorizontalAlignment="Left" Height="60" Background="#FF0069C0" VerticalAlignment="Top"/>
+            </materialDesign:TransitioningContent>
+            <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged">
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="UserAdd" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Dodaj uprawnionego pracownika" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="UserGroup" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Lista uprawnionych pracowników" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Tools" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Dodaj rejestrowane wyposażenie" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="ViewList" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Lista rejestrowanego wyposażenia" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="FileExcel" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Baza termostatów" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" Foreground="LightGray">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="FileExcel" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
+                        <TextBlock Text="Baza paletek" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                    </StackPanel>
+                </ListViewItem>
+            </ListView>
+        </Grid>
+        </StackPanel>
     </Grid>
 </Window>
