--- a/Maintenance dashboard/MainWindow.xaml
+++ b/Maintenance dashboard/MainWindow.xaml
@@ -23,6 +23,9 @@
                     <Button Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray">
                         <materialDesign:PackIcon Kind="BellOutline" IsEnabled="False"/>
                     </Button>
+                    <Button Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="Button_Click">
+                        <materialDesign:PackIcon Kind="Home" />
+                    </Button>
                     <Button Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray">
                         <materialDesign:PackIcon Kind="Settings" IsEnabled="False"/>
                     </Button>
@@ -32,10 +35,10 @@
                 </StackPanel>
             </Grid>
         </StackPanel>
-
+        <TextBlock Text="Maintenance dashboard" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="30" FontFamily="Comic Sans MS" Foreground="#FF0069C0" Margin="0,13,597,0"/>
         <Grid Margin="330 20 10 10">
             <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock Text="Maintenance dashboard" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="2" FontSize="30" FontFamily="Comic Sans MS" Foreground="#FF0069C0"/>
+               
                 <Image Source="Photo/Zenek.png" Margin="0 50"/>
             </Grid>
         </Grid>
@@ -46,14 +49,8 @@
                 <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
                     <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" HorizontalAlignment="Left" Height="60" Background="#FF0069C0" VerticalAlignment="Top"/>
                 </materialDesign:TransitioningContent>
-                
+
                 <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged">
-                    <ListViewItem Height="60" Foreground="LightGray">
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Home" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Home" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
-                        </StackPanel>
-                    </ListViewItem>
                     <ListViewItem Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="UsersAddOutline" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
