--- a/Maintenance dashboard/WindowControl/AddRegisterToolControl.xaml
+++ b/Maintenance dashboard/WindowControl/AddRegisterToolControl.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maintenance_dashboard.WindowControl"
              mc:Ignorable="d" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" Height="auto" Width="auto" >
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" Height="980" Width="1505" Margin="15" >
     <Grid>
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect FadeIn}">
             <Grid Background="White">
-                <Rectangle Height="350" Width="500" VerticalAlignment="Top">
+                <Rectangle Height="490" Width="1600" VerticalAlignment="Top">
                     <Rectangle.Fill>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="#FF2281D1"/>
@@ -31,7 +31,7 @@
                         <TextBox materialDesign:HintAssist.Hint="Kod UID" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" />
                     </StackPanel>
                 </Grid>
-                <Button VerticalAlignment="Bottom" Background="#FF0069C0" BorderBrush="#FF0069C0" Margin="0,170" Width="150" Content="DODAJ"/>
+                <Button VerticalAlignment="Bottom" Background="#FF0069C0" BorderBrush="#FF0069C0" Margin="0,310" Width="150" Content="DODAJ"/>
             </Grid>
         </materialDesign:TransitioningContent>
     </Grid>
