--- a/Maintenance dashboard/MainWindow.xaml
+++ b/Maintenance dashboard/MainWindow.xaml
@@ -38,13 +38,13 @@
         <TextBlock Text="Maintenance dashboard" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="30" FontFamily="Comic Sans MS" Foreground="#FF0069C0" Margin="0,13,597,0"/>
         <Grid Margin="330 20 10 10">
             <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center">
-               
-                <Image Source="Photo/Zenek.png" Margin="0 50"/>
+
+                <Image Source="Resources/Zenek.png" Margin="0 50"/>
             </Grid>
         </Grid>
 
         <StackPanel Width="320" HorizontalAlignment="Left" Background="#ff222222" >
-            <Image Source="Photo/MarelliLogo.jpg" Margin="10"/>
+            <Image Source="Resources/MarelliLogo.jpg" Margin="10"/>
             <Grid HorizontalAlignment="Left" Background="#ff222222" VerticalAlignment="Bottom">
                 <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
                     <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" HorizontalAlignment="Left" Height="60" Background="#FF0069C0" VerticalAlignment="Top"/>
