--- a/Maintenance dashboard/WindowControl/AddUserControl.xaml
+++ b/Maintenance dashboard/WindowControl/AddUserControl.xaml
@@ -6,6 +6,10 @@
              xmlns:local="clr-namespace:Maintenance_dashboard"
              mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" Height="980" Width="800" Margin="15">
+    <UserControl.DataContext>
+        <local:ViewModel/>
+    </UserControl.DataContext>
+     
     <Grid>
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect FadeIn }">
             <Grid Background="White" Margin="1,0,-1,0">
@@ -35,10 +39,9 @@
                 <Grid x:Name="test" Width="420" Height="340">
                     <TextBlock Text="UPRAWNIENI PRACOWNICY" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" FontSize="18" Foreground="Gray"/>
                     <StackPanel VerticalAlignment="Center" Margin="10">
-                        <TextBox x:Name="txtName" materialDesign:HintAssist.Hint="Imie" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" />
-                        <TextBox x:Name="txtSurname" materialDesign:HintAssist.Hint="Nazwisko" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" />
-                        <TextBlock x:Name="txtUidCode" Text="..........." Margin="0, 10" Foreground="Gray" HorizontalAlignment="Center"/>
-                        <TextBlock Text="Kod UID" Margin="0, 10" Foreground="Gray" HorizontalAlignment="Center"/>
+                        <TextBox materialDesign:HintAssist.Hint="Imie" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding FirstName, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"/>
+                        <TextBox materialDesign:HintAssist.Hint="Nazwisko" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding LastName, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"/>
+                        <TextBox  materialDesign:HintAssist.Hint="Kod UID" materialDesign:HintAssist.HelperText="" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" />
                     </StackPanel>
                 </Grid>
                 <Button x:Name="btnAddEmployee" VerticalAlignment="Bottom" Background="#FF0069C0" BorderBrush="#FF0069C0" Margin="0,310" Width="150" Content="DODAJ" Click="Button_Click"/>
