--- a/Maintenance dashboard/WindowControl/AddUserControl.xaml
+++ b/Maintenance dashboard/WindowControl/AddUserControl.xaml
@@ -39,8 +39,8 @@
                 <Grid x:Name="test" Width="420" Height="340">
                     <TextBlock Text="UPRAWNIENI PRACOWNICY" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" FontSize="18" Foreground="Gray"/>
                     <StackPanel VerticalAlignment="Center" Margin="10">
-                        <TextBox materialDesign:HintAssist.Hint="Imie" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding FirstName, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"/>
-                        <TextBox materialDesign:HintAssist.Hint="Nazwisko" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding LastName, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}"/>
+                        <TextBox x:Name="txtFirstName" materialDesign:HintAssist.Hint="Imie" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"/>
+                        <TextBox x:Name="txtLastName" materialDesign:HintAssist.Hint="Nazwisko" materialDesign:HintAssist.HelperText=""   Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"/>
                         <TextBox  materialDesign:HintAssist.Hint="Kod UID" materialDesign:HintAssist.HelperText="" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0, 10" />
                     </StackPanel>
                 </Grid>
