--- a/Maintenance dashboard/WindowControl/RegisterToolListControl.xaml
+++ b/Maintenance dashboard/WindowControl/RegisterToolListControl.xaml
@@ -11,14 +11,12 @@
         <CollectionViewSource x:Key="registerToolViewSource" d:DesignSource="{d:DesignInstance {x:Type Maintenance_dashboard:RegisterTool}, CreateList=True}"/>
     </UserControl.Resources>
     <Grid DataContext="{StaticResource registerToolViewSource}">
-
-        <DataGrid x:Name="registerToolDataGrid" RowDetailsVisibilityMode="VisibleWhenSelected" IsReadOnly="True" ItemsSource="{Binding}" EnableRowVirtualization="True" AutoGenerateColumns="False">
+        <DataGrid x:Name="registerToolDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="0,0,3,10" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="idColumn" Width="SizeToHeader" Header="Id" Binding="{Binding Id}"/>
-                <DataGridTextColumn x:Name="nameColumn" Width="SizeToHeader" Header="Nazwa" Binding="{Binding Name}"/>
-                <DataGridTextColumn x:Name="uidColumn" Width="SizeToHeader" Header="Kod UID" Binding="{Binding Uid}"/>
+                <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="toolNameColumn" Binding="{Binding ToolName}" Header="Tool Name" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="uidCodeColumn" Binding="{Binding UidCode}" Header="Uid Code" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
-
     </Grid>
 </UserControl>
