--- a/Maintenance dashboard/DashbordViewModel/AddEmployee/AddEmployeeControl.xaml
+++ b/Maintenance dashboard/DashbordViewModel/AddEmployee/AddEmployeeControl.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="Maintenance_dashboard.AddUserControl"
+﻿<UserControl x:Class="Maintenance_dashboard.DashbordViewModel.AddEmployee.AddEmployeeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Maintenance_dashboard"
+             xmlns:local="clr-namespace:Maintenance_dashboard.DashbordViewModel.AddEmployee" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" Height="980" Width="800" Margin="15">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <local:ViewModel/>
     </UserControl.DataContext>
-     
+
     <Grid>
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect FadeIn }">
             <Grid Background="White" Margin="1,0,-1,0">
@@ -61,6 +61,6 @@
                     </Button.Style>
                 </Button>
             </Grid>
-        </materialDesign:TransitioningContent> 
+        </materialDesign:TransitioningContent>
     </Grid>
 </UserControl>
