--- a/Maintenance dashboard/DashbordViewModel/RegisterToolControl/RegisterToolListControl.xaml
+++ b/Maintenance dashboard/DashbordViewModel/RegisterToolControl/RegisterToolListControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maintenance_dashboard.WindowControl"
-             xmlns:Maintenance_dashboard="clr-namespace:Maintenance_dashboard" x:Class="Maintenance_dashboard.WindowControl.RegisterToolList"
+             xmlns:Maintenance_dashboard="clr-namespace:Maintenance_dashboard" x:Class="Maintenance_dashboard.DashbordViewModel.RegisterTool.RegisterToolList"
              mc:Ignorable="d" 
              Height="auto" Width="auto" Margin="15" Loaded="UserControl_Loaded">
     <UserControl.Resources>
