--- a/Maintenance dashboard/MainWindow.xaml
+++ b/Maintenance dashboard/MainWindow.xaml
@@ -39,13 +39,13 @@
                             <StackPanel Width="300" Margin="8">
                                 <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="LOGOWANIE"/>
                                 <PasswordBox x:Name="PasswordBox" Margin="8" materialDesign:HintAssist.Hint="Hasło" materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.HelperText="Wpisz hasło" />
-                                <Button Style="{StaticResource MaterialDesignFlatButton}" Click="Button_Click" Margin="8"  ToolTip="MaterialDesignFlatButton" Content="AKCEPTUJ"/>
+                                <Button x:Name="btnSavePassword" Click="btnSavePassword_Click" Style="{StaticResource MaterialDesignFlatButton}" Margin="8"  ToolTip="MaterialDesignFlatButton" Content="AKCEPTUJ"/>
                             </StackPanel>
                         </materialDesign:PopupBox>
                     </StackPanel>
 
                     
-                    <Button x:Name="btnCloseWindow" Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
+                    <Button x:Name="btnCloseWindow" Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="btnCloseWindow_Click" IsEnabled="False">
                         <materialDesign:PackIcon Kind="Power"/>
                     </Button>
                     
@@ -68,7 +68,7 @@
                     <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" HorizontalAlignment="Left" Height="60" Background="#FF0069C0" VerticalAlignment="Top"/>
                 </materialDesign:TransitioningContent>
 
-                <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged">
+                <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged" IsEnabled="False">
                     <ListViewItem Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="UsersAddOutline" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
